[package]
name = "hermit-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
toml = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.9"
indicatif = "0.18.4"
colored = "2.0"
tempfile = "3.8"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
